514 fix modal spacing (#87)
* fix: feedback from designer

* fix: feedback from designer

--- a/src/app/containers/reference-form-dialog/ref-form-grid.module.scss
+++ b/src/app/containers/reference-form-dialog/ref-form-grid.module.scss
@@ -8,6 +8,12 @@
     grid-column: 1 / span 3;
   }
 
+  .inPress {
+    grid-column: 1 / span 3;
+    padding-left: 16px;
+    padding-bottom: 10px;
+  }
+
   .firstCol {
     grid-column: 1;
   }
